--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,8 @@ dependencies {
     //RecyclerView Dependencies
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    
+
+    //Glide Dependencies
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
