Applied Material Theme

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,7 @@ dependencies {
     //Glide Dependencies
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    //Material Design Dependency
+    implementation "com.google.android.material:material:1.1.0"
 }
