PhotoView dependency added to replace ImageView

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,7 @@ dependencies {
 
     //Material Design Dependency
     implementation "com.google.android.material:material:1.1.0"
+
+    //PhotoView Dependency for auto image zooming and double tap and pinch zoom replacing ImageView
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 }
