Full Image Activity created with PhotoView

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.ImageGallery" />
+        <activity android:name=".activity.FullImage" />
     </application>
 
 </manifest>
