--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ allprojects {
         google()
         jcenter()
         maven {
+            //Used for PhotoView dependency
             url "https://jitpack.io"
         }
     }
