--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,5 @@ dependencies {
 
     //Firebase ML-Kit recongnize and label images dependency
     implementation 'com.google.firebase:firebase-ml-vision:24.0.3'
+    implementation 'com.google.firebase:firebase-ml-vision-image-label-model:20.0.1'
 }
