Added Firebase Face Detection dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,7 @@ dependencies {
     //Firebase ML-Kit recongnize and label images dependency
     implementation 'com.google.firebase:firebase-ml-vision:24.0.3'
     implementation 'com.google.firebase:firebase-ml-vision-image-label-model:20.0.1'
+
+    //Firebase ML-Kit face detection dependency
+    implementation 'com.google.firebase:firebase-ml-vision-face-model:20.0.1'
 }
